modified github message

--- a/project_01/login.html
+++ b/project_01/login.html
@@ -12,7 +12,8 @@
 </head>
 <body>
     <div>
-    <a href=""><i class="logo"></i></a>
+    <a href=""><i class="logo"></i>로그인</a>
+        
     </div>
     
 </body>
