--- a/project_21_01/publish/index.html
+++ b/project_21_01/publish/index.html
@@ -12,10 +12,11 @@
     <link rel="stylesheet" href="./common/css/common.css">
     <link rel="stylesheet" href="./common/css/media.css">
     <script src="./common/js/custom.js"></script>
+    <script src="./common/js/include.js"></script>
 </head>
 
 <body>
-    <header class="header" data-include-path="header.html"></header>
+    <header id="header" class="header"></header>
     <!-- 배너 슬라이드-->
     <section id="slider">
         <ul class="img_box">
@@ -37,287 +38,17 @@
             </ul>
         </div>
     </section>
-    <!-- 게시글 리스트(.main_list) -->  
-    <main class="main_list" id="update_slot">
-        <ul class="main_row">
-            <li class="main_con">
-                <article class="item_list">
-                    <!-- 썸네일 이미지(.item_box)/ 경매,택배 아이콘(.dealer_position) -->
-                    <div class="item_box">
-                        <img src="./common/img/test1.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
-                        </p>
-                    </div>
-                    <!-- 일반 타이틀(.cont) -->
-                    <div class="cont">
-                        <h3 class="item_title">나이키운동화</h3>
-                        <p class="item_price">현재가<strong>20,000</strong>원</p>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <div class="item_box">
-                        <img src="./common/img/test2.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="./common/img/delivery_icon.svg" alt="delivery_icon">
-                        </p>
-                    </div>
-                    <div class="cont">
-                        <h3 class="item_title">나이키운동화</h3>
-                        <p class="item_price">현재가<strong>10,000</strong>원</p>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <div class="item_box">
-                        <img src="./common/img/test7.png" alt="img1">
-                        <p class="dealer_position">
-                            <img src="./common/img/auction_icon.svg" alt="auction_icon">
-                        </p>
-                        <div class="bid_time">
-                            <p><i class="fas fa-stopwatch"></i>2/6 22:00</p>
-                        </div>
-                    </div>
-                    <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
-                    <div class="cont">
-                        <div class="bid_title">
-                            <h3 class="item_title">Nike</h3>
-                            <p class="item_price">현재가<strong>20,000</strong>원</p>
-                            <p class="item_price_before">최초가&nbsp;50,000원</p>
-                        </div>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <div class="item_box">
-                        <img src="./common/img/test8.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
-                        </p>
-                    </div>
-                    <div class="cont">
-                        <h3 class="item_title">나이키운동화</h3>
-                        <p class="item_price">현재가<strong>20,000</strong>원</p>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <!-- 썸네일 이미지(.item_box)/ 경매,택배 아이콘(.dealer_position) -->
-                    <div class="item_box">
-                        <img src="./common/img/test9.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
-                        </p>
-                    </div>
-                    <!-- 일반 타이틀(.cont) -->
-                    <div class="cont">
-                        <h3 class="item_title">나이키운동화</h3>
-                        <p class="item_price">현재가<strong>20,000</strong>원</p>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="./common/img/delivery_icon.svg" alt="delivery_icon">
-                        </p>
-                    </div>
-                    <div class="cont">
-                        <h3 class="item_title">나이키운동화</h3>
-                        <p class="item_price">현재가<strong>10,000</strong>원</p>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="./common/img/auction_icon.svg" alt="auction_icon">
-                        </p>
-                        <div class="bid_time">
-                            <p><i class="fas fa-stopwatch"></i>2/6 22:00</p>
-                        </div>
-                    </div>
-                    <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
-                    <div class="cont">
-                        <div class="bid_title">
-                            <h3 class="item_title">Nike</h3>
-                            <p class="item_price">현재가<strong>20,000</strong>원</p>
-                            <p class="item_price_before">최초가&nbsp;50,000원</p>
-                        </div>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
-                        </p>
-                    </div>
-                    <div class="cont">
-                        <h3 class="item_title">나이키운동화</h3>
-                        <p class="item_price">현재가<strong>20,000</strong>원</p>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <!-- 썸네일 이미지(.item_box)/ 경매,택배 아이콘(.dealer_position) -->
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
-                        </p>
-                    </div>
-                    <!-- 일반 타이틀(.cont) -->
-                    <div class="cont">
-                        <h3 class="item_title">나이키운동화</h3>
-                        <p class="item_price">현재가<strong>20,000</strong>원</p>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="./common/img/delivery_icon.svg" alt="delivery_icon">
-                        </p>
-                    </div>
-                    <div class="cont">
-                        <h3 class="item_title">나이키운동화</h3>
-                        <p class="item_price">현재가<strong>10,000</strong>원</p>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="./common/img/auction_icon.svg" alt="auction_icon">
-                        </p>
-                        <div class="bid_time">
-                            <p><i class="fas fa-stopwatch"></i>2/6 22:00</p>
-                        </div>
-                    </div>
-                    <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
-                    <div class="cont">
-                        <div class="bid_title">
-                            <h3 class="item_title">Nike</h3>
-                            <p class="item_price">현재가<strong>20,000</strong>원</p>
-                            <p class="item_price_before">최초가&nbsp;50,000원</p>
-                        </div>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
-                        </p>
-                    </div>
-                    <div class="cont">
-                        <h3 class="item_title">나이키운동화</h3>
-                        <p class="item_price">현재가<strong>20,000</strong>원</p>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <!-- 썸네일 이미지(.item_box)/ 경매,택배 아이콘(.dealer_position) -->
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
-                        </p>
-                    </div>
-                    <!-- 일반 타이틀(.cont) -->
-                    <div class="cont">
-                        <h3 class="item_title">나이키운동화</h3>
-                        <p class="item_price">현재가<strong>20,000</strong>원</p>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="./common/img/delivery_icon.svg" alt="delivery_icon">
-                        </p>
-                    </div>
-                    <div class="cont">
-                        <h3 class="item_title">나이키운동화</h3>
-                        <p class="item_price">현재가<strong>10,000</strong>원</p>
-                    </div>
-                </article>
-            </li>
-            <li class="main_con">
-                <article class="item_list">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <p class="dealer_position">
-                            <img src="./common/img/auction_icon.svg" alt="auction_icon">
-                        </p>
-                        <div class="bid_time">
-                            <p><i class="fas fa-stopwatch"></i>2/6 22:00</p>
-                        </div>
-                    </div>
-                    <!-- 경매 타이틀.cont_bid / 시간,현재가,최초가 -->
-                    <div class="cont">
-                        <div class="bid_title">
-                            <h3 class="item_title">Nike</h3>
-                            <p class="item_price">현재가<strong>20,000</strong>원</p>
-                            <p class="item_price_before">최초가&nbsp;50,000원</p>
-                        </div>
-                    </div>
-                </article>
-            </li>
-        <!-- 추가 게시글 .main_row>li 자바스크립트 AJAX으로 로딩-->
-        <!-- <div data-include-path="mainlist_inc.html"></div> -->
-        </ul>
-    </main>
+    <!-- 게시글 리스트 -->
+    <main id="main" class="main"></main>
     <!-- 더보기 -->
     <div class="more_load">
-        <a href="#">더보기<i class="fas fa-chevron-down"></i></a>
+        <a href="#">더보기 <i class="fas fa-chevron-down"></i></a>
     </div>
     <!-- 상단으로 아이콘 -->
     <aside class="home">
         <a href="#top"><i class="fas fa-chevron-circle-up"></i>TOP</a>
     </aside>
     <!-- 푸터 -->
-    <footer class="footer" data-include-path="footer.html"></footer>
-    <script>
-    // include
-window.addEventListener('load', function() {
-    var allElements = document.getElementsByTagName('*');
-    Array.prototype.forEach.call(allElements, function(el) {
-        var includePath = el.dataset.includePath;
-        if (includePath) {
-            var xhttp = new XMLHttpRequest();
-            xhttp.onreadystatechange = function () {
-                if (this.readyState == 4 && this.status == 200) {
-                    el.innerHTML = this.responseText;
-                }
-            };
-            xhttp.open('GET', includePath, true);
-            xhttp.send();
-        }
-    });  
-});
-    </script>
+    <footer id="footer" class="footer"></footer>
 </body>
 </html>
