--- a/project_21_01/publish/signup-login.html
+++ b/project_21_01/publish/signup-login.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>signup-login</title>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="./common/css/fontawesome/fontawesome-all.css">
     <link rel="stylesheet" href="./common/css/reset.css">
     <link rel="stylesheet" href="./common/css/signup-login.css">   
     <link rel="stylesheet" href="./common/css/fontawesome/style.css">
-
 </head>
 <body>
     <section class="form">
@@ -87,8 +85,7 @@
             <li class="tab"><a href="#login">로그인</a></li>
         </ul>
 </section>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="./common/js/signup-login.js"></script>
-
-    
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="./common/js/signup-login.js"></script>    
 </body>
 </html>
