--- a/project_21_01/publish/footer.html
+++ b/project_21_01/publish/footer.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="./common/css/fontawesome/fontawesome-all.css">
     <link rel="stylesheet" href="./common/css/reset.css">
-    <link rel="stylesheet" href="./common/css/common.css">
+    <link rel="stylesheet" href="./common/css/footer.css">
     <link rel="stylesheet" href="./common/css/fontawesome/style.css">
     <link rel="stylesheet" href="./common/css/media.css">
 </head>
